<resources>
    <string name="app_name">Personas</string>
    <string name="titulo_crear_personas">CREAR PERSONAS</string>
    <string name="cedula">Cedula</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="guardar">Guardar</string>
    <string name="limpiar">Limpiar</string>
    <string name="titulo_listar_personas">LISTAR PERSONAS</string>
    <string name="numero">No.</string>
    <string name="listar">Listar</string>
    <string name="crear">Crear</string>
    <string name="mensaje_guardado_con_exito">mensaje guardado con exito</string>
    <string name="mensaje_error_cedula">Digite la cedula</string>
    <string name="mensaje_error_nombre">Digite el nombre</string>
    <string name="mensaje_error_apellido">Digite el Apellido</string>
    <string-array name="opciones">
        <item>@string/crear</item>
        <item>@string/listar</item>
    </string-array>
</resources>